cicd/eks-cicd/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rng-service
  namespace: rng-dev
spec:
  selector:
    app: rng
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
