cicd/eks-cicd/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rng-ingress
  namespace: rng-dev
spec:
  rules:
    - host: rng.aws.demo.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rng-service
                port:
                  number: 80
